# taskMonitor

./: READme.md
Clustering/: Clustering.ipynb  activity.md  cluster3_desc_backup_database.md  cluster_3.md  clustering.md  clusters_descriptions.jsonl  commands_descriptions_1.jsonl  corrections.md  data_train_file.jsonl  get_clustering_data.py  merged_descriptions.jsonl
Collect_info/: model_test.txt
Collect_info/Collect_command/command_desc/command_describer_project/: Makefile  README.md  pyproject.toml
Collect_info/Collect_command/command_desc/command_describer_project/command_describer/: main.py
Collect_info/Collect_command/command_desc/command_describer_project/command_describer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Collect_info/Collect_command/command_desc/command_describer_project/command_describer/command_describer.egg-info/: SOURCES.txt  top_level.txt
Collect_info/Collect_command/command_desc/command_describer_project/command_describer/core/: constants.py  describer.py  pattern_expander.py
Collect_info/Collect_command/command_desc/command_describer_project/command_describer/data/dict_json/: android.json  cisco-ios.json  osx.json
ilaina/: copy.txt  friends.txt  how.txt  link.txt  mdp.txt  nohup.out  quest.txt  test.txt  you.txt
laboratory_scrap/: HOW.txt  Mistral_7B.md  another_test.py  down_mistral.md  essai2.py  essai_mistral.py  failed_code.js  full_code.js  gpt_try_to_scrap.py  intercatable.md  langChain.md  let_me_see.txt  make_a_quest.js  models.md  open_you.py  quest.txt  question.txt  scrap_gpt.py  steps.md  (+6 more)
(+209 files in other folders)
